Fix hosted app button layout when maximized in Windows 10

Hosted app windows using GlassBrowserFrameView (Windows 10 only)
had their controls and title misplaced when maximized.
This CL adds missing padding values to the titlebar layout.

Before: https://bugs.chromium.org/p/chromium/issues/attachment?aid=354512&signed_aid=Tmrgizah9A_QhgrbRHXHFQ==&inline=1
After: https://bugs.chromium.org/p/chromium/issues/attachment?aid=354513&signed_aid=h_aEa4bnb7fIu3UutTuNrA==&inline=1

Bug: 876168, 872203
Change-Id: I9e4d3e1ff0776cfba09981cad30a0cfa39469e7c
Reviewed-on: https://chromium-review.googlesource.com/1183019
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585681}
Former-commit-id: 484ed22f82cbbee35c787dea089fd1303e8f5f82